# reflection_cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  enum.h  main.cpp  main_old.cpp  object.h  objects.h  print.h  reflection.h
example/data/: bicycle.h  color.h
example/handwritten/: TheEnumClass.rr.h  TheStruct1.rr.h  TheStruct2.rr.h  reflection.h
example/handwritten/reflected_types/: Bicycle.rr.h  Colors.rr.h  TheEnumClass.rr.h  TheStruct1.rr.h  TheStruct2.rr.h
generator/: CMakeLists.txt  README.md  config.h  config.ini  config.yaml  file_manager.h  main.cpp  parser_cpp.h  thread_pool.h  version.h  version.in
generator/benchmarks/templates/Jinja2/: run_plain.py  run_precompiled.py
generator/benchmarks/templates/Jinja2/templates/: enum.jinja2
generator/benchmarks/templates/cpp_inja/: enum.inja  enum.rex.h  main.cpp
generator/parsing/: error_parse.h  parser.h  parser_cpp.h  position.h
generator/parsing/lexers/: compile.sh  cpp_source.l
generator/parsing/lexers/compiled/: .gitignore
generator/parsing/parsers/: enum.h  ini.h  object.h
generator/parsing/parsers/states/: enum.h  ini.h  object.h
generator/parsing/tokens/: cpp_source.h
generator/registry/: node.h
generator/self_generated/: reflection.h
generator/self_generated/reflected_types/: Config.er.h  Config.rr.h  Templates.er.h  Templates.rr.h
generator/templates/:  object.inja  enum.inja  object.inja
generator/tests/: CMakeLists.txt  main.cpp
generator/tests/cases/: enums.h  objects.h
generator/tests/cases/configs/: invalid.ini  shuffled.ini  valid.ini
include/rex/: actions.h  append_buf.h  attributes.h  constexpr_map.h  converter.h  expected.h  format.h  the_great_table.h  tools.h  traits.h
include/rex/cursor/: cursor.h  cursor_item.h  reader.h  writer.h
include/rex/error/: tight_string.h
include/rex/expected/: error.h  expected.h  expected_value.h  overloaded.h  tight_string.h
include/rex/info/: converter.h  enum_info.h  field_info.h  type_id.h  type_info.h
include/rex/info/type_info/: type_info.h
include/rex/info/type_info/variants/: float.h  integer.h  object.h  primitive.h
include/rex/info/type_info/variants/array/: array.h  c_array.h
include/rex/info/type_info/variants/enum/: enum.h
include/rex/info/type_info/variants/map/: imap.h  map.h  std_unordered_map.h
include/rex/info/type_info/variants/sequence/: isequence.h  sequence.h
include/rex/info/type_info/variants/sequence/list/: list.h  std_deque.h  std_list.h
include/rex/info/type_info/variants/sequence/queue/: queue.h  std_queue.h
include/rex/info/type_info/variants/sequence/set/: iset.h  set.h  std_unordered_set.h
include/rex/info/type_info/variants/sequence/stack/: istack.h  stack.h  std_stack.h
include/rex/reflection/: printer.h  reflection.h  the_great_table.h  type_actions.h  type_actions_def.h
include/rex/serializer/: native.h  nlohmann_json_adapter.h  serializer.h
include/rex/tools/: format.h  names.h
include/rex/type_info/: type_info.h
include/rex/type_info/variants/: dictionary.h  object.h  primitive.h
include/rex/type_info/variants/array/: array.h  c_array.h  iarray.h  std_array.h
include/rex/type_info/variants/map/: imap.h  map.h  std_map.h  std_unordered_map.h
include/rex/type_info/variants/sequence/: isequence.h  sequence.h
include/rex/type_info/variants/sequence/list/: ilist.h  list.h  std_deque.h  std_list.h
include/rex/type_info/variants/sequence/queue/: std_queue.h
include/rex/type_info/variants/sequence/set/: set.h  std_set.h  std_unordered_set.h
include/rex/type_info/variants/sequence/stack/: std_stack.h
include/rex/type_info/variants/sequence/strategies/: array.h  deque.h  list.h  queue.h  stack.h  vector.h
include/rex/type_info/variants/sequence/vector/: std_vector.h
include/rex/types/: all_types.h  bool.h  char.h  common_actions.h  double.h  float.h  helper.h  int16_t.h  int32_t.h  int64_t.h  int8_t.h  integer.h  map.h  sequence.h  std_string.h  string.h  string_view.h  uint16_t.h  uint32_t.h  uint64_t.h  uint8_t.h  unknown.h
include/rex/types/array/: c_array.h  std_array.h
include/rex/types/containers/: c_array.h  deque.h  list.h  map.h  queue.h  set.h  stack.h  std_array.h  unordered_map.h  unordered_set.h  vector.h
include/rex/var/: cell.h  var.h
include/rex/variable/: box.h  cell.h  var.h
include/rex/variant/: variant.h
include/rr/: attributes.h  constexpr_map.h  expected.h
include/rr/error/: error.h  error_parse.h  position.h
include/rr/info/: access.h  field_info.h  type_id.h
include/rr/info/type_info/: type_info.h
include/rr/info/type_info/variants/: bool.h  float.h  integer.h  object.h  string.h
include/rr/info/type_info/variants/array/: array.h  c_array.h  iarray.h  std_array.h
include/rr/info/type_info/variants/enum/: enum_impl.h  ienum.h
include/rr/info/type_info/variants/floating/: float.h  floating.h  ifloating.h
include/rr/info/type_info/variants/integer/: iinteger.h  int.h
include/rr/info/type_info/variants/map/: imap.h  map.h  std_map.h  std_unordered_map.h
include/rr/info/type_info/variants/sequence/: isequence.h  sequence.h
include/rr/reflection/: actions.h  printer.h  reflection.h  the_great_table.h
include/rr/serialization/: json.h  yaml.h
include/rr/serialization/parsing/: define_retry.h  parser_json.h  parser_yaml.h  position.h
include/rr/serialization/parsing/lexers/: compile.sh  json.l  yaml.l
include/rr/serialization/parsing/lexers/compiled/: lexer_json.yy.h  lexer_yaml.yy.h
include/rr/serializer/: json.h  yaml.h
include/rr/serializer/parsing/: parser_yaml.h
include/rr/serializer/parsing/lexers/: compile.sh  yaml.l
include/rr/serializer/parsing/lexers/compiled/: lexer_yaml.yy.h
include/rr/tools/: format.h  traits.h
include/rr/types/: bool.h  common_actions.h  float.h  integer.h  map.h  sequence.h  string.h  unknown.h
include/rr/types/array/: c_array.h  std_array.h
include/rr/variable/: box.h  var.h
include/rr/variant/: variant.h
tests/: CMakeLists.txt  main.cpp
(+14 files in other folders)
